--- a/subprojects/docs/src/docs/css/base.css
+++ b/subprojects/docs/src/docs/css/base.css
@@ -226,7 +226,7 @@ blockquote p:last-child {
 }
 
 /* layout */
-.container, .book, .chapter, .footer {
+.container, .appendix, .book, .chapter, .footer {
     background-color: white;
     border-radius: 5px;
     max-width: 45rem;
@@ -265,7 +265,7 @@ blockquote p:last-child {
     .sidebar {
         display: none;
     }
-    .container, .book, .chapter {
+    .container, .appendix, .book, .chapter {
         margin-top: 0;
         margin-bottom: 0;
     }
@@ -776,16 +776,37 @@ h3.releaseinfo {
         width: 13.75rem;
     }
 
-    .chapter, .book {
+    .appendix, .chapter, .book {
         flex: 0 0 45rem;
         margin: 0 20px;
     }
 }
 
+/* Table of Contents */
+.toc p {
+    font-size: 1em;
+}
+.toc dl dt,
+.toc a {
+    line-height: 1.0;
+}
+.toc dl dt {
+    padding-bottom: 0.625rem;
+}
+.toc a {
+    color: #1DA2BD;
+}
+.toc p {
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+}
+.toc dl, .list-of-examples dl {
+    margin-left: 0;
+}
+
 /* Fixed intra-chapter navigation for desktops */
 @media screen and (min-width: 75rem) {
-    .book .toc,
-    .chapter .toc {
+    .toc {
         position: fixed;
         left: calc(50% + 380px);
         top: 50px;
@@ -796,27 +817,23 @@ h3.releaseinfo {
     }
 
     /* Replace TOC header only on desktop */
-    .book .toc:before,
-    .chapter .toc:before {
+    .toc:before {
         content: "Contents";
         display: block;
         font-weight: 500;
         margin: 0.4rem 0 0.625rem 0;
     }
 
-    .book .toc p:first-of-type,
-    .chapter .toc p:first-of-type {
+    .toc p:first-of-type {
         display: none;
     }
 
-    .book .toc a,
-    .chapter .toc a {
+    .toc a {
         color: #02303A;
         opacity: 0.7;
     }
 
-    .book .toc a.active,
-    .chapter .toc a.active {
+    .toc a.active {
         color: #1BA8C4;
         opacity: 1.0;
     }
@@ -846,60 +863,25 @@ h3.releaseinfo {
 }
 
 @media screen and (min-width: 84.375rem) {
-    .book .toc,
-    .chapter .toc {
+    .toc {
         left: calc(50% + 26.25rem);
     }
 
-    .chapter, .book {
+    .appendix, .book, .chapter {
         flex-basis: 50rem;
         max-width: 50rem;
     }
 }
 
 @media screen and (min-width: 93.75rem) {
-    .book .toc,
-    .chapter .toc {
+    .toc {
         left: calc(50% + 31.25rem);
     }
 
-    .chapter, .book {
+    .appendix, .book, .chapter {
         flex-basis: 60rem;
         max-width: 60rem;
     }
-}
-
-/*
- * Table of Contents
- */
-.book .toc p,
-.chapter .toc p {
-    font-size: 1em;
-}
-
-.book .toc dl dt,
-.book .toc a,
-.chapter .toc dl dt,
-.chapter .toc a {
-    line-height: 1.0;
-}
-
-.book .toc dl dt,
-.chapter .toc dl dt {
-    padding-bottom: 0.625rem;
-}
-
-.toc a {
-    color: #1DA2BD;
-}
-
-.toc p {
-    font-size: 1.5em;
-    margin-bottom: 0.5em;
-}
-
-.toc dl, .list-of-examples dl {
-    margin-left: 0;
 }
 
 .navheader, .navfooter, .navbar {
